--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,6 +1,6 @@
-POSTGRES_DB=loco_app
+POSTGRES_DB=next_learn_api_loco_v0101_development
 POSTGRES_USER=loco
 POSTGRES_PASSWORD=loco
-DATABASE_URL=postgres://loco:loco@db:5432/loco_app
+DATABASE_URL=postgres://loco:loco@db:5432/next_learn_api_loco_v0101_development
 REDIS_URL=redis://redis:6379
 MAILER_HOST=mailer
