--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -6,8 +6,8 @@ services:
     command: sleep infinity
     networks:
       - db
-      - redis
-      - mailer
+      # - redis
+      # - mailer
     volumes:
       - ../..:/workspaces:cached
     env_file:
@@ -23,21 +23,21 @@ services:
       - postgres-data:/var/lib/postgresql/data
     env_file:
       - .env
-  redis:
-    image: redis:latest
-    restart: unless-stopped
-    ports:
-      - 6379:6379
-    networks:
-      - redis
-  mailer:
-    image: mailtutan/mailtutan:latest
-    restart: unless-stopped
-    ports:
-      - 1080:1080
-      - 1025:1025
-    networks:
-      - mailer
+  # redis:
+  #   image: redis:latest
+  #   restart: unless-stopped
+  #   ports:
+  #     - 6379:6379
+  #   networks:
+  #     - redis
+  # mailer:
+  #   image: mailtutan/mailtutan:latest
+  #   restart: unless-stopped
+  #   ports:
+  #     - 1080:1080
+  #     - 1025:1025
+  #   networks:
+  #     - mailer
 
 volumes:
   postgres-data:
@@ -45,5 +45,5 @@ volumes:
 
 networks:
   db:
-  redis:
-  mailer:
+  # redis:
+  # mailer:
